--- a/packages/metadata-interfaces/package.json
+++ b/packages/metadata-interfaces/package.json
@@ -20,7 +20,7 @@
     "node": ">=14.15.0 || >=16.0.0"
   },
   "scripts": {
-    "clean": "rm -rf lib es umd tsconfig.tsbuildinfo",
+    "clean": "shx rm -rf lib es umd tsconfig.tsbuildinfo",
     "test": "jest --ci --coverage --maxWorkers=2 --passWithNoTests",
     "build": "npm run clean && tsc && rollup -c --bundleConfigAsCjs && npm run annotate:es",
     "annotate:es": "babel es --out-dir es --no-babelrc --plugins annotate-pure-calls",
@@ -50,6 +50,7 @@
     "lerna-alias": "3.0.3-0",
     "rollup": "^3.29.5",
     "rollup-plugin-typescript2": "^0.31.0",
+    "shx": "^0.4.0",
     "size-limit": "^7.0.8",
     "ts-jest": "^26.4.0",
     "typescript": "^5.9.2"
