--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,38 @@ name: CI
 on: [push]
 
 jobs:
-  # other packages
-  build-other-packages:
-    name: Build, lint, and test on Node ${{ matrix.node }}
+  build:
+    name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: [14.x]
-        package: [core-interfaces, http-query]
-    uses: ./.github/workflows/build.yml
-    with:
-      node: ${{ matrix.node }}
-      package: ${{ matrix.package }}
+        node: ["14.x", "16.x", "17.x", "18.x", "19.x", "22.x"]
+        os: [ubuntu-latest]
 
-  # mcp-core
-  build-mcp-core:
-    name: Build, lint, and test on Node ${{ matrix.node }}
-    strategy:
-      matrix:
-        node: [22.x]
-        package: [mcp-core]
-    uses: ./.github/workflows/build.yml
-    with:
-      node: ${{ matrix.node }}
-      package: ${{ matrix.package }}
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Use Node ${{ matrix.node }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Remove mcp-core for Node < 22
+        if: ${{ !startsWith(matrix.node, '22') }}
+        run: rm -rf packages/mcp-core
+
+      - name: Install deps
+        run: yarn
+
+      - name: Build
+        run: yarn build
+
+      - name: Test
+        run: yarn test
+
+      - name: Lint
+        run: yarn lint
+
+      - name: Code formatting
+        run: yarn check-style
