--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -56,7 +56,9 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "size-limit": "^7.0.8",
     "ts-jest": "^26.4.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "express": "^4.18.2",
+    "@types/express": "^4.17.21"
   },
   "dependencies": {
     "@apimatic/convert-to-stream": "^0.1.7",
