--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -26,11 +26,7 @@
   "license": "ISC",
   "size-limit": [
     {
-      "path": "umd/schema.js",
-      "limit": "5 KB"
-    },
-    {
-      "path": "umd/schema.esm.js",
+      "path": "es/index.js",
       "limit": "5 KB"
     }
   ],
