--- a/packages/mcp-core/package.json
+++ b/packages/mcp-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apimatic/mcp-core",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "exports": {
     ".": {
       "import": {
@@ -30,10 +30,13 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.29.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "dependencies": {
     "@apimatic/json-bigint": "^1.2.0",
-    "@apimatic/metadata-interfaces": "^0.1.0",
+    "@apimatic/metadata-interfaces": "^0.1.1-alpha.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
     "commander": "^14.0.0",
     "cors": "^2.8.5",
