--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,10 +44,13 @@
     "@babel/core": "^7.26.10",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/detect-node": "^2.0.2",
+    "@types/express": "^4.17.21",
     "@types/lodash.defaultsdeep": "^4.6.9",
     "@types/lodash.flatmap": "^4.5.6",
+    "@types/supertest": "^6.0.3",
     "abort-controller": "^3.0.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
+    "express": "^4.18.2",
     "jest": "^26.6.3",
     "jsdom": "^19.0.0",
     "jsdom-global": "^3.0.2",
@@ -55,6 +58,7 @@
     "rollup": "^3.29.5",
     "rollup-plugin-typescript2": "^0.31.0",
     "size-limit": "^7.0.8",
+    "supertest": "^7.1.4",
     "ts-jest": "^26.4.0",
     "typescript": "^4.9.5"
   },
