--- a/packages/hmac-signature-verifier/package.json
+++ b/packages/hmac-signature-verifier/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@apimatic/pagination",
-  "version": "0.1.4",
-  "description": "provides the async utilities for handling paginated API responses.",
+  "name": "@apimatic/hmac-signature-verifier",
+  "version": "0.1.0",
+  "description": "provides utilities for handling HMAC signature verification",
   "main": "lib/index.js",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "clean": "rimraf lib es umd tsconfig.tsbuildinfo",
-    "test": "jest --ci --coverage --maxWorkers=2 --passWithNoTests",
+    "test": "jest",
     "build": "npm run clean && tsc && rollup -c --bundleConfigAsCjs && npm run annotate:es",
     "annotate:es": "babel es --out-dir es --no-babelrc --plugins annotate-pure-calls",
     "preversion": "npm run test",
@@ -31,7 +31,8 @@
     }
   ],
   "dependencies": {
-    "@apimatic/core-interfaces": "^0.2.12"
+    "@apimatic/core-interfaces": "^0.2.12",
+    "@apimatic/http-headers": "^0.3.7"
   },
   "publishConfig": {
     "access": "public"
@@ -39,6 +40,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:apimatic/apimatic-js-runtime.git",
-    "directory": "packages/pagination"
+    "directory": "packages/hmac-signature-verifier"
   }
 }
