--- a/packages/http-query/package.json
+++ b/packages/http-query/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@apimatic/file-wrapper": "^0.3.8",
     "@apimatic/json-bigint": "^1.2.0",
+    "@apimatic/core-interfaces": "^0.2.13",
     "tslib": "^2.8.1"
   },
   "publishConfig": {
