--- a/packages/core-interfaces/package.json
+++ b/packages/core-interfaces/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@apimatic/file-wrapper": "^0.3.8",
+    "@apimatic/json-bigint": "^1.2.0",
     "tslib": "^2.8.1"
   },
   "publishConfig": {
